k8s/recipes-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-db
  labels:
    app: recipes-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-db
  template:
    metadata:
      labels:
        app: recipes-db
    spec:
      containers:
      - name: postgres
        image: docker.io/library/recipes-db:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: recipes-db
spec:
  selector:
    app: recipes-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
